force-app/main/default/objects/HealthCare_Diagnosis__c/HealthCare_Diagnosis__c.object-meta.xml
<CustomObject>
    <label>HealthCare Diagnosis</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HealthCareDiagnosis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>