force-app/main/default/objects/HealthCare_Diagnosis__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Indicates the category for this diagnosis such as newborn, pediatric, maternity, or adult.</description>
    <inlineHelpText>Indicates the category for this diagnosis such as newborn, pediatric, maternity, or adult.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>newborn</fullName>
            </value>
            <value>
                <fullName>pediatric</fullName>
            </value>
            <value>
                <fullName>maternity</fullName>
            </value>
            <value>
                <fullName>adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>