force-app/main/default/objects/HealthCare_Diagnosis__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Industry-standard diagnosis code.</description>
    <inlineHelpText>Industry-standard diagnosis code.</inlineHelpText>
    <label>Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>