force-app/main/default/objects/HealthCare_Diagnosis__c/fields/CodeDescription__c.field-meta.xml
<CustomField>
    <fullName>CodeDescription__c</fullName>
    <description>Description of the diagnosis code.</description>
    <inlineHelpText>Description of the diagnosis code.</inlineHelpText>
    <label>CodeDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>