force-app/main/default/objects/HealthCare_Diagnosis__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <description>Type of diagnosis code represented in the record such as ICD-9 or ICD-10.</description>
    <inlineHelpText>Type of diagnosis code represented in the record such as ICD-9 or ICD-10.</inlineHelpText>
    <label>CodeType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICD10-D</fullName>
                <default>true</default>
                <label>ICD10-D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>