force-app/main/default/objects/HealthCare_Diagnosis__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Start date for the code.</description>
    <inlineHelpText>Start date for the code.</inlineHelpText>
    <label>EffectiveDate</label>
    <type>Date</type>
</CustomField>