force-app/main/default/objects/HealthCare_Diagnosis__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End date for the code.</description>
    <inlineHelpText>End date for the code.</inlineHelpText>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>