force-app/main/default/objects/HealthCare_Diagnosis__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Indicates whether this diagnosis is for males, females, or all genders.</description>
    <inlineHelpText>Indicates whether this diagnosis is for males, females, or all genders.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Gender Neutral</fullName>
                <isActive>false</isActive>
                <label>Gender Neutral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>