force-app/main/default/objects/HealthCare_Diagnosis__c/fields/IsComplicationOrComorbidity__c.field-meta.xml
<CustomField>
    <fullName>IsComplicationOrComorbidity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsComplicationOrComorbidity</label>
    <type>Checkbox</type>
</CustomField>