force-app/main/default/objects/HealthCare_Diagnosis__c/fields/IsHospitalAcquiredCondition__c.field-meta.xml
<CustomField>
    <fullName>IsHospitalAcquiredCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHospitalAcquiredCondition</label>
    <type>Checkbox</type>
</CustomField>