force-app/main/default/objects/HealthCare_Diagnosis__c/fields/IsMajorComplicationOrComorbidity__c.field-meta.xml
<CustomField>
    <fullName>IsMajorComplicationOrComorbidity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMajorComplicationOrComorbidity</label>
    <type>Checkbox</type>
</CustomField>