force-app/main/default/objects/HealthCare_Diagnosis__c/fields/IsPresentOnAdmissionExempt__c.field-meta.xml
<CustomField>
    <fullName>IsPresentOnAdmissionExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPresentOnAdmissionExempt</label>
    <type>Checkbox</type>
</CustomField>