force-app/main/default/objects/HealthCare_Diagnosis__c/fields/IsPrimaryDiagnosis__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryDiagnosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrimaryDiagnosis</label>
    <type>Checkbox</type>
</CustomField>