force-app/main/default/objects/HealthCare_Diagnosis__c/fields/IsUnacceptablePrincipalDxIpAdmit__c.field-meta.xml
<CustomField>
    <fullName>IsUnacceptablePrincipalDxIpAdmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUnacceptablePrincipalDxIpAdmit</label>
    <type>Checkbox</type>
</CustomField>