force-app/main/default/objects/HealthCare_Diagnosis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Code__c</columns>
    <columns>CodeDescription__c</columns>
    <columns>Gender__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>